--- a/extension/popup.html
+++ b/extension/popup.html
@@ -13,6 +13,8 @@
       <p>为网页视频添加实时字幕</p>
     </header>
     
+    <div id="status-message" style="display: none;"></div>
+    
     <main>
       <div class="status-container">
         <div class="status-indicator" id="statusIndicator"></div>
